--- a/Frontend/src/app/components/product/product-create/product-create.component.html
+++ b/Frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,4 +1,2 @@
-<p [id]="propLegal">product-crud works!</p>
-
-
-<button (click)="fazerAlgo()">Fazer Algo!</button>
+<button mat-raised-button (click)="createProduct()" color="primary">Salvar</button>
+<button mat-raised-button (click)="cancel()" color="danger">Cancelar</button>
