--- a/Frontend/src/app/components/product/product-create/product-create.component.html
+++ b/Frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,2 +1,6 @@
-<button mat-raised-button (click)="createProduct()" color="primary">Salvar</button>
-<button mat-raised-button (click)="cancel()" color="danger">Cancelar</button>
+<button mat-raised-button (click)="createProduct()" color="primary">
+    Salvar
+</button>
+<button mat-raised-button (click)="cancel()" color="danger">
+    Cancelar
+</button>
