--- a/Frontend/src/app/components/product/product-read/product-read.component.html
+++ b/Frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,7 +1,3 @@
-<ul>
-    <li *ngFor="let product of products">{{product.name}} - R${{product.price}}</li>
-</ul>
-
 <div class="mat-elevation-z4">
     <table mat-table class="full-width-table" [dataSource]="products">
       <!-- Id Column -->
@@ -19,7 +15,20 @@
       <!-- Price Column -->
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef >Preço</th>
-        <td mat-cell *matCellDef="let row">{{row.price}}</td>
+        <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef >Ações</th>
+        <td mat-cell *matCellDef="let row">
+          <a routerLink="/products/update/{{row.id}}" class="edit">
+            <i class="material-icons ">edit</i>
+          </a>
+          <a routerLink="/products/delete/{{row.id}}" class="delete">
+            <i class="material-icons">delete</i>
+          </a>
+        </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
