--- a/Frontend/src/app/components/template/header/header.component.css
+++ b/Frontend/src/app/components/template/header/header.component.css
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
+    color: #000000;
 }
 
 .header .logo {
@@ -21,3 +22,4 @@
 .header .title-group i {
     padding-right: 8px;
 }
+
